--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h2>Class Registration Form</h2>
-  <form action="save.php" method="post" enctype="multipart/form-data">
+  <form action="/vercel-php-api/api/save.php" method="post" enctype="multipart/form-data">
     
     <!-- Name -->
     <input type="text" name="name" placeholder="Full Name" required>
